--- a/mybootstrap.css
+++ b/mybootstrap.css
@@ -122,6 +122,34 @@ border-right: 60px solid transparent;
 border-radius: 50%;
 }
 
+.cylinder{
+		position: relative;
+	display: inline-block;
+	width: 100px;
+	height: 80px;
+	background-color: #0088CC;
+}
+
+.cylinder:after{
+position: absolute;
+background-color: #0088CC;
+content: '';
+width: 100%;
+height: 40px;
+border-radius: 50%;
+bottom: -20px;
+}
+
+.cylinder:before{
+	position: absolute;
+	background-color: #22AAEE;
+	content: '';
+	width: 100%;
+	height: 40px;
+	border-radius: 50%;
+	top: -20px;
+}
+
 .k_select:after{
 	font-family: FontAwesome;
 	content: '\f0dd';
