--- a/mybootstrap.css
+++ b/mybootstrap.css
@@ -6,6 +6,75 @@ body{
 	font-family: Helvetica, Arial;
 }
 
+		.box{
+			position: relative;
+			display: inline-block;
+			background-image: url("images/kid.jpg");
+			width: 250px;
+			height: 166px;
+			background-size: cover;
+			border: 6px solid white;
+			box-shadow: 0px 0px 1px #999;			
+			margin-left: 20px;
+			margin-top: 20px;
+		}
+
+		.box1:before{
+			position: absolute;
+			content: "";
+			width: 40%;
+			height: 50%;
+			left: 7%;
+			background-color: #333;
+			z-index: -1;
+			border-radius: 14%;
+			box-shadow: 0px 9px 20px #333;
+			bottom: 4px;
+			-webkit-transform: rotate(5deg);
+		}
+
+		.box1:after{
+			position: absolute;
+			content: "";
+			width: 40%;
+			height: 50%;
+			right: 7%;
+			background-color: #333;
+			z-index: -1;
+			border-radius: 14%;
+			box-shadow: 0px 9px 20px #333;
+			bottom: 4px;
+			-webkit-transform: rotate(-5deg);
+		}
+
+		.box2:before {
+			position: absolute;
+			content: "";
+			width: 40%;
+			height: 12%;
+			left: 0%;
+			background-color: #333;
+			z-index: -1;
+			border-radius: 14%;
+			box-shadow: 0px 9px 20px #333;
+			bottom: 1px;
+			-webkit-transform: rotate(-5deg);
+		}
+
+		.box3:after {
+			position: absolute;
+			content: "";
+			width: 40%;
+			height: 12%;
+			right: 0%;
+			background-color: #333;
+			z-index: -1;
+			border-radius: 14%;
+			box-shadow: 0px 9px 20px #333;
+			bottom: 1px;
+			-webkit-transform: rotate(5deg);
+		}
+
 
 .shape_circle{
 	position: relative;
